# potatocore_bootloader

./: .gitignore  pyproject.toml
potatocore_bootloader/: board.py  clock.py  programmer.py  rgb.py  serial.py  spi.py  top.py  util.py
